--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
     "next": "14.1.0",
